# esp32

./: .env.device  .gitignore  Cargo.toml  build.rs  partitions.csv
.cargo/: config.toml
.devcontainer/: devcontainer.json
ota_uploader/: .gitignore  compile.sh  index.ts  package.json  pnpm-lock.yaml
src/: captive.html  dhcp.rs  ethernet.rs  led.rs  main.rs  memory.rs  mqtt.rs  myheap.rs  ota.rs  output.rs  tcp.rs  uart.rs  wifi.rs
src/mqtt/: connection.rs  inbound.rs  mod.rs  publish.rs  task.rs
