[package]
edition = "2024"
name = "esp32"
version = "0.1.0"

[[bin]]
name = "esp32"
path = "./src/main.rs"

[dependencies]
defmt = "1.0.1"
embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embassy-sync = "0.6.2"
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32",
  "panic-handler",
] }
esp-hal = { version = "1.0.0", features = [
  "defmt",
  "esp32",
  "unstable",
  "psram"
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
  "dns-max-server-count-4",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
critical-section = "1.2.0"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32",
  "smoltcp",
  "unstable",
  "wifi",
] }
esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32",
] }
heapless = { version = "0.8.0", default-features = false }
static_cell = "2.1.1"
enumset = "1.1.5"
reqwless = { version = "0.12.0", default-features = false, features = [
  "embedded-tls",
] }
picoserve = { version = "0.15.0", features = ["embassy"] }
esp-storage = { version = "0.5.0", features = ["esp32", "low-level", "nor-flash"] }
embedded-storage = "0.3.1"
embassy-net-wiznet = "0.2.1"
embassy-embedded-hal = "0.3.0"
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
embassy-futures = "0.1.1"
bt-hci = "0.6.0"
trouble-host = { version = "0.5.0", features = ["gatt"] }
mountain-mqtt = { version="0.2.0", default-features = false, features = [
  "embedded-hal-async",
  "embedded-io-async",
] }
lite-json = { version = "0.2.0", default-features = false }
serde-json-core = "0.6.0"
serde = { version = "1.0.219", default-features = false }
anyhow = { version = "1.0.97", default-features = false }
edge-dhcp = "0.6.0"
ekv = "1.0.0"
postcard = "1.1.3"

[build-dependencies]
advmac = { version = "1.0.3", features = ["rand"] }
dotenv = "0.15.0"

[profile.dev]
opt-level = 's'

[profile.dev.package."*"]
opt-level = "s"

[profile.dev.package.esp-storage]
opt-level = 3
[profile.release.package.esp-storage]
opt-level = 3

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
